--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Audit Encrypt.to</title>
+  <title>Audit HackenProof</title>
 	<script src="jquery.js" type="text/javascript"></script>
 	<script src="audit.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>	
-	<h1>Security Audit for <a href="https://encrypt.to/">Encrypt.to</a></h1>
+	<h1>Security Audit for <a href="https://hackenproof.com/">HackenProof</a></h1>
   <p>Use this tool to audit the deployed source code.</p>	
 	<div id="running">Test running <img src="indicator.gif"></div>	
 	<br />
 	<table id="resultTable" border="0" cellspacing="3" cellpadding="3">
 		<tbody>
-			<tr><th>Github</th><th>equals?</th><th>Encrypt.to</th><th>Size</th></tr>
+			<tr><th>Github</th><th>equals?</th><th>CDN jsdelivr</th><th>Size</th></tr>
 		</tbody>		
 	</table>	
 	<br />
 	<p id="commit"></p>
 	<br />
   	<div id="deployed">    
-	Audit code: <a href="https://github.com/encrypt-to/encrypt-to.github.io">https://github.com/encrypt-to/encrypt-to.github.io</a>
   </div>
 </body>
 </html>
